tests/invalid/repr_unsupported_bytes_arg/main.py
def main() -> None:
    x: str = repr(b"abc")
    print(x)
